--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,15 @@ a:hover {
     margin-right: 1.5rem;
     padding:.5rem 
 }
+
+.card{
+    border-width: 2px;
+    border-style: solid;
+    padding: .5rem
+}
+
+.cardGrid{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: .5rem;
+}
